syntax = "proto3";

package monad_proto.validator_data;

import "basic.proto";

message ProtoValidatorDataEntry {
    monad_proto.basic.ProtoNodeId node_id = 1;
    monad_proto.basic.ProtoStake stake = 2;
    monad_proto.basic.ProtoPubkey cert_pubkey = 3;
}

message ProtoValidatorSetData {
    repeated ProtoValidatorDataEntry validators = 1;
}